# JetBrains-DiscordRichPresence

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
discord-game-sdk/native/: CMakeLists.txt
discord-game-sdk/native/include/: functions.h
discord-game-sdk/native/src/: functions.cpp
src/main/java/com/github/teamhartex/jetbrainsplugins/discordrichpresence/: Plugin.java
